message RequestSceneData {
	optional int32 id = 1[default = 0];
	optional string sceneType = 2;
}
